Modificar lenguaje de EN a ES

--- a/emmet/index.html
+++ b/emmet/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset=>"UTF-8">
 	<title>MCDS 1562347</title>
@@ -7,4 +7,4 @@
 <body>
 	<h1>MCDS 1562347</h1>
 </body>
-</html
+</html>
